complete "PLAN_TRAJ"

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,16 @@
     "python.analysis.extraPaths": [
         "/root/shared_volume/fuel_gazebo_ws/devel/lib/python3/dist-packages",
         "/opt/ros/noetic/lib/python3/dist-packages"
-    ]
+    ],
+    "files.associations": {
+        "array": "cpp",
+        "bitset": "cpp",
+        "string_view": "cpp",
+        "hash_map": "cpp",
+        "hash_set": "cpp",
+        "initializer_list": "cpp",
+        "utility": "cpp",
+        "valarray": "cpp",
+        "random": "cpp"
+    }
 }
